# dense_reconstruction_utils

./: CMakeLists.txt  README.md  package.xml
include/: PoseInterpolator.h  Utils.h
launch/: extract_images_aqua.launch  extract_images_bag.launch  image_pose_stamp_test.launch  interpolate_pose_depth_fusion.launch  pose_interpolation_test.launch  stereo_sync.launch
notebooks/: stamps.txt  stereo_sync_test.ipynb
scripts/: bag_extract_images.py  read_depth_maps.py  read_depth_maps_2.0.py  stereo_sync.py
scripts/colmap/: colmap.py
src/: PoseInterpolator.cpp  Utils.cpp  bag_extract_images.cpp  correct_traj.cpp  image_pose_test.cpp  interpolate_vio_poses.cpp  pose_interpolation_depth_fusion.cpp  record_traj.cpp  traj_to_pcl.cpp
test_data/: mexico.csv  svin_mexico_cave_short.txt  svin_traj_iterpolated.txt
traj/: svin_loop.txt
