<?xml version="1.0"?>
<package format="2">
  <name>iccv_utils</name>
  <version>0.0.1</version>
  <description> This package constains the utils used in several SLAM projects  </description>
  <maintainer email="bjoshi@email.sc.edu">Bharat Joshi</maintainer>
  <license>BSD</license>

  <author email="bjoshi@email.sc.edu">Bharat Joshi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>message_filters</depend>
  <depend>roslib</depend>
  
  <exec_depend>rospy</exec_depend>

</package>